multi/k8s/overlays/default/10_istio_route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: single-vs
spec:
  hosts:
  - "*"
  gateways:
  - single-gateway
  http:
  - match:
    - uri:
        prefix: "/single/"
    rewrite:
        uri: "/"
    route:
    - destination:
        host: single-svc
        port:
          number: 8080
